@@ -37,6 +37,7 @@ Will Bryant <will.bryant@gmail.com>
 LRN <lrn1986@gmail.com>
 Sven Geggus <sts@fuchsschwanzdomain.de>
 Steve Wolf <stevewolf6@gmail.com>
+Brecht Sanders <brecht@sanders.org>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
