@@ -956,9 +956,20 @@ MHD_add_connection (struct MHD_Daemon *daemon,
 #endif
   {
     /* make socket non-blocking */
+#ifndef MINGW
     int flags = fcntl (connection->socket_fd, F_GETFL);
     if ( (flags == -1) ||
 	 (0 != fcntl (connection->socket_fd, F_SETFL, flags | O_NONBLOCK)) )
+      {
+#if HAVE_MESSAGES
+	FPRINTF(stderr, "Failed to make socket non-blocking: %s\n", 
+		STRERROR (errno));
+#endif
+      }
+#else
+    unsigned long flags = 1;
+    if (0 != ioctlsocket (connection->socket_fd, FIONBIO, &flags))
+#endif
       {
 #if HAVE_MESSAGES
 	FPRINTF(stderr, "Failed to make socket non-blocking: %s\n", 
